objects/vlocity_ins__FeeScheduleColumnConfiguration__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__ColumnDisplayOrder__c</fullName>
        <label>Column Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__ColumnMappingType__c</fullName>
        <description>This is to map columns to specific Fee Schedule field types such as Procedure Code, Facility Price and Non-Facility Price.  The Other type will represent all other columns.</description>
        <label>Column Mapping Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Procedure Code</fullName>
                </value>
                <value>
                    <fullName>Facility Price</fullName>
                </value>
                <value>
                    <fullName>Non-Facility Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ColumnName__c</fullName>
        <label>Column Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__ColumnType__c</fullName>
        <label>Column Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsColumnActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this column is currently active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Fee Schedule Column Configuration</label>
    <pluralLabel>Fee Schedule Column Configurations</pluralLabel>
</CustomObject>